[package]
name = "sarex"
version = "0.1.0"
edition = "2021"
authors = ["Hwi Ahn <ahnhwi@kaist.ac.kr>"]
description = "Tools for the SARex method"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
dirs = "5.0.0"
env_logger = "0.10.0"
log = "0.4.17"
mongodb = "2.4.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = "1.27.0"
